Got a working echo actor in the API with some round robin.

--- a/AkkaSample.Api/appsettings.json
+++ b/AkkaSample.Api/appsettings.json
@@ -4,5 +4,20 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Akka": {
+    "actor": {
+      "deployment": {
+        "echo": {
+          "router": "round-robin-pool",
+          "nrofinstances": 5,
+          "resizer": {
+            "enabled": "on",
+            "lowerbound": 5,
+            "upperbound": 10
+          }
+        }
+      }
+    }
+  }
 }
