test out the broadcast pool

--- a/AkkaSample.Api/appsettings.json
+++ b/AkkaSample.Api/appsettings.json
@@ -9,7 +9,7 @@
     "actor": {
       "deployment": {
         "echo": {
-          "router": "round-robin-pool",
+          "router": "broadcast-pool",
           "nrofinstances": 5,
           "resizer": {
             "enabled": "on",
