Some weird obsecure example of tell and ask, but it shows the concept nicely

--- a/AkkaSample.Api/akka.conf
+++ b/AkkaSample.Api/akka.conf
@@ -5,6 +5,14 @@
 				router = "round-robin-pool"
 				nr-of-instances = 5
 			}
+			/putter {
+				router = "round-robin-pool"
+				nr-of-instances = 5
+			}
+			/getter {
+				router = "round-robin-pool"
+				nr-of-instances = 5
+			}
 		}
 	}
 }
