--- a/AkkaSample.Api/AkkaSample.Api.csproj
+++ b/AkkaSample.Api/AkkaSample.Api.csproj
@@ -7,8 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.3.13" />
+    <PackageReference Include="Akka.DI.Core" Version="1.3.13" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Newteq.Extensions.String" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
